feat: documenta o módulo de autenticação
