# routes/api.php
@@ -21,7 +21,6 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 Route::controller('App\Http\Controllers\Api\AuthController')->group(function () {
     Route::post('/auth/register', 'register')->name('register');
     Route::post('/auth/login', 'login')->name('login');
-    Route::post('/auth/login', 'login')->name('login');
 });
 Route::middleware('auth:sanctum')->group(function () {
     //Product Variation
@@ -66,7 +65,7 @@ Route::middleware('auth:sanctum')->group(function () {
     });
     //User
     Route::controller('App\Http\Controllers\Api\AuthController')->group(function () {
-        Route::get('logout', 'logout')->name('logout');
+        Route::get('/auth/logout', 'logout')->name('logout');
     });
 });
 
